@startuml
skinparam classAttributeIconSize 0

class LoadTransactionsFileUI{
}

class LoadTransactionsFileController{
+loadFileCsv(file)
+loadFileTxt(file)
}

class LoadFromCsvTxt{
loadFile(file)
}

class Platform {
  -String designation
  +getOrganizationsRegister()
  +getFreelancersRegister()
}

class Organization {
  -String designation
  +getTaskList()
  +getPaymentTransactionList()
}

class OrganizationsRegister{
+getOrganizationByUserEmail(email)
}

class AplicacaoPOT {
  +static getInstance()
  +getCurrentSession()
}

class UserSession {
  +getUserEmail()
}

class User {
  -String name
  -String email
  -String password
}

class Collaborator {
  -String name
  -String email
}


class Freelancer {
  -String id
  -String name
  -String email
  -Integer NIF
  -Integer IBAN
  -double OverallPayments
  +Freelancer(id,name,email,NIF,IBAN,level,freeLocation)
  +setPayment(pay)
}

class FreelancersRegister{
+contains(free)
+addFreelancer(free)
+getFreelancerById(freeID)
}

enum LevelOfExpertise {
   -JUNIOR
   -SENIOR
}

class Location {
  -String address
  -String country
  +Location(address,country)
}

class PaymentTransaction {
  -String id
  -Integer day
  -Integer hour
  +PaymentTransaction(transID,free,task)
}

class PaymentTransactionList {
+contains(pay)
+addPaymentTransaction(pay)
}

class Task {
  -String id
  -String briefDescription
  -Double timeDuration
  -Double costPerHour
  -String category
  +Task(taskID,taskDesc,taskDuration,taskCost,taskCategory)
}

class TasksList{
+contains(task)
+addTask(task)
}

class TaskExecution{
  -Date deadline
  -Double delay
  -String descQualityWork
}

LoadTransactionsFileUI .. LoadTransactionsFileController


LoadTransactionsFileController ..> LoadFromCsvTxt

LoadFromCsvTxt -- Platform
LoadFromCsvTxt -- Freelancer
LoadFromCsvTxt -- FreelancersRegister
LoadFromCsvTxt -- Task
LoadFromCsvTxt -- OrganizationsRegister
LoadFromCsvTxt -- Organization
LoadFromCsvTxt -- AplicacaoPOT
LoadFromCsvTxt -- UserSession
LoadFromCsvTxt -- TasksList
LoadFromCsvTxt -- PaymentTransactionList
LoadFromCsvTxt -- Collaborator




Platform "1" -- "*" Organization : has registered >
Platform "1" -- "*" Freelancer : has registered >
Platform "1" -- "*" User : has registered >
Platform "1" --> "1" FreelancersRegister : has
Platform "1" --> "1" OrganizationsRegister : has

FreelancersRegister "1" --> "*" Freelancer : has

OrganizationsRegister "1" --> "*" Organization : has

Organization "1" --> "1" TasksList : has
Organization "1" --> "1" PaymentTransactionList : has
Organization "1" --> "0..1" Collaborator : has
Organization "1" -- "*" Task : has >
Organization "1" -- "*" PaymentTransaction : has >

TasksList "1" --> "*" Task : has

PaymentTransactionList "1" --> "*" PaymentTransaction : has

PaymentTransaction "*" --> "1" Freelancer : to
PaymentTransaction "1" --> "1" Task : has

Collaborator "1" --> "*" Freelancer : registers
Collaborator "1" --> "*" Task : registers
Collaborator "1" --> "*" TaskExecution : registers
Collaborator "1" --> "*" PaymentTransaction : does
Collaborator "0..1" -- "1" User : act as >

Task "1" --> "1" TaskExecution : has


Freelancer "1" -- "1" LevelOfExpertise : has >
Freelancer "1" -- "1" Location : has >
Freelancer "1" -- "*" Task : does >

@enduml
